--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
     = stylesheet_link_tag 'lootfactor'
     = javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js'
     = javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js'
-    = javascript_include_tag 'jquery.tablesorter.min', 'jquery.tooltip', 'jquery.autocomplete', :cache => 'jquery_extras'
+    = javascript_include_tag 'jquery.tablesorter.min', 'jquery.hotkeys.min', 'jquery.tooltip', 'jquery.autocomplete', :cache => 'jquery_extras'
     = javascript_include_tag 'jugg.core', 'jugg', 'jugg.autocomplete', 'jugg.tablesorter', :cache => 'application'
     - if admin?
       = javascript_include_tag 'jugg.admin'
