Change "Start a new Raid" to "Create a New Raid", since it doesn't actually start until the user clicks the link on the show page.

--- a/app/views/attendance/raids/index.html.haml
+++ b/app/views/attendance/raids/index.html.haml
@@ -20,4 +20,4 @@
           %td.number= h(raid.attendees.size)
           %td.number= h(raid.loots.size)
 
-%fieldset.submit= link_to('Start a New Raid', new_live_raid_path, :class => 'input_submit')
+%fieldset.submit= link_to('Create a New Raid', new_live_raid_path, :class => 'input_submit')
