--- a/app/views/attendance/raids/new.html.haml
+++ b/app/views/attendance/raids/new.html.haml
@@ -3,4 +3,4 @@
   - form.inputs do
     = form.input :attendees_string, :label => 'Initial attendees', :hint => 'Comma-separated', :input_html => {:size => 100}
   - form.buttons :class => 'submit' do
-    = form.submit 'Start', :class => 'input_submit'
+    = form.submit 'Create', :class => 'input_submit'
