--- a/app/views/attendance/raids/show.html.haml
+++ b/app/views/attendance/raids/show.html.haml
@@ -26,11 +26,11 @@
 - breadcrumb link_to('Attendance', live_raids_path), "#{@live_raid.status} Raid"
 
 - if @live_raid.status == 'Pending'
-  %h2.pending= "This raid has not yet been started. #{link_to('Click', start_live_raid_path(@live_raid))} to start."
+  %h2.pending= link_to("This raid has not yet been started. Click to start.", start_live_raid_path(@live_raid))
 - elsif @live_raid.status == 'Active'
-  %h2.active= "This raid is active. #{link_to('Click', stop_live_raid_path(@live_raid))} to stop."
+  %h2.active= link_to("This raid is active. Click to stop.", stop_live_raid_path(@live_raid), :confirm => "Are you sure you want to stop this raid?")
 - elsif @live_raid.status == 'Completed'
-  %h2.completed= "This raid has been completed. #{link_to('Click', post_live_raid_path(@live_raid))} to post."
+  %h2.completed= link_to("This raid has been completed. Click to post.", post_live_raid_path(@live_raid))
 %div.category_block.block_wrap
   #attendance_tabs
     %ul.tab_bar.no_title.mini
