--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,7 +13,7 @@
     - if admin?
       = javascript_include_tag 'jugg.admin'
     = javascript_include_tag 'http://static.wowhead.com/widgets/power.js'
-  %body.lf{ :id => "#{controller.controller_name}_root" }
+  %body.lf{ :id => "#{controller.controller_path.gsub(/\//, '_')}_root" }
     #ipbwrapper
       %h1= @page_title || page_title
       
