--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -32,12 +32,12 @@
 %div.category_block.block_wrap
   #member_tabs
     %ul.tab_bar.no_title.mini
-      %li.tab_toggle= link_to(content_tag(:span, 'Raids'),        '#t-raids')
-      %li.tab_toggle= link_to(content_tag(:span, 'Loots'),        member_path(@member) + '/t.loots')
-      %li.tab_toggle= link_to(content_tag(:span, 'Wishlist'),     member_path(@member) + '/t.wishlist')
+      %li.tab_toggle= link_to(content_tag(:span, 'Raids'),        member_raids_path(@member))
+      %li.tab_toggle= link_to(content_tag(:span, 'Loots'),        member_loots_path(@member))
+      %li.tab_toggle= link_to(content_tag(:span, 'Wishlist'),     member_wishlists_path(@member))
       %li.tab_toggle= link_to(content_tag(:span, 'Achievements'), member_path(@member) + '/t.achievements')
       %li.tab_toggle= link_to(content_tag(:span, 'Punishments'),  member_path(@member) + '/t.punishments')
-    #t-raids= render :partial => 'members/raids'
+    #t-raids
     #t-loots
     #t-wishlist
     #t-achievements
