--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -36,7 +36,7 @@
       %li.tab_toggle= link_to(content_tag(:span, 'Loots'),        member_loots_path(@member))
       %li.tab_toggle= link_to(content_tag(:span, 'Wishlist'),     member_wishlists_path(@member))
       %li.tab_toggle= link_to(content_tag(:span, 'Achievements'), member_achievements_path(@member))
-      / %li.tab_toggle= link_to(content_tag(:span, 'Punishments'),  member_punishments_path(@member))
+      %li.tab_toggle= link_to(content_tag(:span, 'Punishments'),  member_punishments_path(@member))
     #t-raids
     #t-loots
     #t-wishlist
