Use cookies for tabs on Members#show

--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -1,6 +1,7 @@
 :javascript
   $(document).ready(function(){
     $('#member_tabs').tabs({
+      cookie: { expires: 30 },
       cache: true,
       ajaxOptions: { success: setupModeration }
     });
