--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -13,7 +13,7 @@
 %div.category_block.block_wrap
   #item_tabs
     %ul.tab_bar.no_title.mini
-      %li.tab_toggle= link_to(content_tag(:span, "Loots (#{@loots.size})"),         '#t-loots')
+      %li.tab_toggle= link_to(content_tag(:span, "Loots (#{@item.loots.size})"),    '#t-loots')
       %li.tab_toggle= link_to(content_tag(:span, "Wishlists (#{@wishlists.size})"), '#t-wishlists')
     #t-loots
       %table#loot.ipb_table.tablesorter
