--- a/app/views/members/wishlists/_form.html.haml
+++ b/app/views/members/wishlists/_form.html.haml
@@ -1,7 +1,7 @@
 %div.message.error.hide
 - semantic_remote_form_for [@member, @wishlist] do |form|
   - form.inputs do
-    = form.input :wow_id, :as => :hidden
+    = form.input :item_id, :as => :hidden
     = form.input :item_name, :label => 'Item name or ID'
     = form.input :note, :required => false
     .wishlist_priority
