Use content_tag helpers instead of raw HTML for progress_bar helper

--- a/public/stylesheets/sass/lootfactor.sass
+++ b/public/stylesheets/sass/lootfactor.sass
@@ -404,19 +404,18 @@ div.pagination
     background: transparent
 
 // Progress Bars --------------------------------------------------------------
-// See http://blog.leetsoft.com/2006/8/22/super-simple-css-bars
-// and http://wiki.github.com/paolodona/rails-widgets/progressbar
 div.progress-container
   border: 1px solid #ccc
   width: 90%
-  margin: 2px 5px 2px 0
-  padding: 1px
+  margin: 0
+  padding: 0
   float: left
   background: white
   div
     height: 12px
 span.progress
-  line-height: 15px
+  line-height: 12px
+  padding-left: 5px
 
 // Tabs -----------------------------------------------------------------------
 .ui-tabs
