--- a/app/views/members/wishlists/index.html.haml
+++ b/app/views/members/wishlists/index.html.haml
@@ -1,10 +1,9 @@
 :javascript
   $(document).ready(function() {
-    sortWishlistTable();
     $('.help').tooltip({ showURL: false });
     wishlistEditLinks();
   });
-%table#wishlists.ipb_table.tablesorter
+%table#wishlists.ipb_table.tablesorter.as_member_wishlist
   %thead
     %tr
       %th.icon &nbsp;
