--- a/public/stylesheets/sass/lootfactor.sass
+++ b/public/stylesheets/sass/lootfactor.sass
@@ -342,7 +342,7 @@ table.ipb_table
     a
       color: #838383
 
-  tbody#itemfilter
+  tbody.filterable
     tr
       span
         padding-right: 16px
@@ -350,7 +350,7 @@ table.ipb_table
           background: url(/images/bullet_left.png) no-repeat center right
           text-decoration: underline
           cursor: pointer
-    tr.shown
+    tr.filtering
       span
         background: url(/images/bullet_delete.png) no-repeat center right
 
