Move "Wishlist Form" javascript to its own file namespaced to our JuggLF object

--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -1,8 +1,9 @@
 :javascript
-  $(document).ready(function(){
+  $(function() {
     $('#member_tabs').tabs({
       cookie: { expires: 30 },
       cache: true,
+      ajaxOptions: { success: JuggLF.tablesorter.init }
     });
   });
 
