--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
     = javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js'
     = javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js'
     = javascript_include_tag 'jquery.tablesorter.min', 'jquery.hotkeys.min', 'jquery.tooltip', 'jquery.autocomplete', 'jquery.cookie', :cache => 'jquery_extras'
-    = javascript_include_tag 'jugg.core', 'jugg.autocomplete', 'jugg.item_filter', 'jugg.moderation', 'jugg.tablesorter', 'jugg.wishlist', 'jugg', :cache => 'application'
+    = javascript_include_tag 'jugg', 'jugg.autocomplete', 'jugg.item_filter', 'jugg.moderation', 'jugg.tablesorter', 'jugg.wishlist', :cache => 'application'
     - if admin?
       = javascript_include_tag 'jugg.admin'
     = javascript_include_tag 'http://static.wowhead.com/widgets/power.js'
