--- a/app/views/wishlists/index.html.haml
+++ b/app/views/wishlists/index.html.haml
@@ -21,7 +21,7 @@
           - @items.each do |item|
             %div[item]
               %p.posted_info
-                = link_to_function(image_tag('clipboard.png'), "wishlistCompare(#{item.id})")
+                = link_to_function(image_tag('clipboard.png'), "JuggLF.wishlist.compare(#{item.id})")
                 %span= link_to_item_with_stats(item.object)
                 - unless item.note.nil?
                   = "(#{h(item.note)})"
