--- a/public/stylesheets/sass/lootfactor.sass
+++ b/public/stylesheets/sass/lootfactor.sass
@@ -403,6 +403,11 @@ div.pagination
   .gap
     background: transparent
 
+  .twitter_pagination
+    display: block
+    text-align: center
+    padding: 10px 10px
+
 // Progress Bars --------------------------------------------------------------
 div.progress-container
   border: 1px solid #ccc
