--- a/app/views/members/raids/index.html.haml
+++ b/app/views/members/raids/index.html.haml
@@ -1,24 +1,9 @@
-:javascript
-  $(document).ready(function() {
-    $('#raids_pagination a').click(function() {
-      $.get($(this).attr('href'), function(value) {
-        $('#raids_pagination').parent().html(value);
-      });
-      return false;
-    });
-  });
 %table.ipb_table
   %thead
     %tr
       %th.date Date
       %th.attendance Attendance
       %th.note Note
-  %tbody
-    - @raids.each do |raid|
-      %tr{ :class => cycle('row1', 'row2') + raid_date_classes(raid) }
-        %td.date
-          = link_to h(raid.date), raid_path(raid)
-          = render :partial => 'shared/moderation', :object => raid if admin?
-        %td.attendance= member_raid_attendance(raid, @member)
-        %td.note= h(raid.note)
-= will_paginate(@raids, :id => 'raids_pagination')
+  %tbody#raids
+    = render :partial => 'raid', :collection => @raids
+= will_paginate(@raids, :renderer => TwitterPagination::LinkRenderer, :id => 'raids_pagination')
