Make the 'More' bar 98% width, I liked this better

--- a/public/stylesheets/sass/lootfactor.sass
+++ b/public/stylesheets/sass/lootfactor.sass
@@ -407,6 +407,7 @@ div.pagination
     display: block
     text-align: center
     padding: 10px 10px
+    width: 98%
 
 // Progress Bars --------------------------------------------------------------
 div.progress-container
