Fix the re-adjusting column width when moderation is shown

--- a/app/views/members/loots/_loot.html.haml
+++ b/app/views/members/loots/_loot.html.haml
@@ -1,5 +1,5 @@
 %tr{ :class => cycle('row1', 'row2') + ' ' + loot_row_classes(loot) }[loot]
-  %td
+  %td.item
     = link_to_item_with_stats(loot.item)
     = render :partial => 'shared/moderation', :object => loot if admin?
   %td= loot_tell_types(loot)
