--- a/public/stylesheets/sass/lootfactor.sass
+++ b/public/stylesheets/sass/lootfactor.sass
@@ -298,6 +298,9 @@ table.ipb_table
   th.member, td.member
     text-align: left
     min-width: 150px
+  th.item, td.item
+    text-align: left
+    min-width: 245px
   th.attendance, td.attendance
     text-align: right
     min-width: 80px
