Fragment caching for the index page
We now cache each 'block' of the index page individually, and expire them immediately when
a record it depicts is modified.

--- a/app/views/index/_least_recruitable.html.haml
+++ b/app/views/index/_least_recruitable.html.haml
@@ -5,7 +5,7 @@
       %th Class
       %th.number Declined
   %tbody
-    - worst_recruits.each do |wow_class, percent|
+    - least_recruitable.each do |wow_class, percent|
       %tr{ :class => cycle('row1', 'row2') }
         %td{ :class => wow_class }= wow_class.titlecase
         %td.number== #{(percent * 100).floor}%
