--- a/app/views/index/_most_requested.html.haml
+++ b/app/views/index/_most_requested.html.haml
@@ -5,7 +5,7 @@
       %th Item
       %th.number Wishlists
   %tbody
-    - most_wishlists.each do |item_id, count|
+    - most_requested.each do |item_id, count|
       %tr{ :class => cycle('row1', 'row2') }
         %td= link_to_item_with_stats(Item.find(item_id))
         %td.number= h(count)
